--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,15 +17,18 @@ endif()
 
 include_directories(${CMAKE_SOURCE_DIR}/inspireface-lib/include)
 
+# MacOS需要链接的库
 find_library(FOUNDATION_LIBRARY Foundation)
 find_library(COREML_LIBRARY CoreML)
 find_library(ACCELERATE_LIBRARY Accelerate)
 
-
+# 设置InspireFace库路径
 set(INSPIREFACE_LIB ${CMAKE_SOURCE_DIR}/inspireface-lib/${ARCH}/libInspireFace.a)
+# 设置MNN库路径
 set(MNN_LIB ${CMAKE_SOURCE_DIR}/inspireface-lib/${ARCH}/libMNN.a)
+# 设置需要链接的库
 set(NEED_LIBRARIES ${FOUNDATION_LIBRARY} ${COREML_LIBRARY} ${ACCELERATE_LIBRARY} ${INSPIREFACE_LIB} ${MNN_LIB})
 
-
+# 创建可执行文件
 add_executable(test main.cpp)
 target_link_libraries(test ${NEED_LIBRARIES})
